Added logoff capability

--- a/index.html
+++ b/index.html
@@ -81,18 +81,35 @@
 	<div id="wrapper">        
         <div id="header">
         	<div id="header-content-wrapper">
+                <ol id="menu" class="nya-bs-select dropdown form-control" ng-model="books">
+                    <li>
+                        <a  href="mailto:conduit@nga.mil">
+                            Send Feedback&nbsp;&nbsp;<span class="glyphicon glyphicon-bullhorn pull-right"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a  href="/logoff">
+                            Log Off&nbsp;&nbsp;<span class="glyphicon glyphicon-log-out pull-right"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <div>
+                            Version 0.6.0
+                        </div>
+                    </li>
+                </ol>
             	<div id="header-content">
                 	Conduit Beta
                 </div>
-                <div class="pull-left" style="font-size: .35em">
-                	v0.5.1
-                </div>
+                
+                <!--
                 <a href="mailto:conduit@nga.mil">
                     <div class="btn btn-default pull-right" ng-click="saveState()">
                         <span class="glyphicon glyphicon-bullhorn"></span> 
                         <div class="ico-text-2">&nbsp;Send Feedback</div>
                     </div>
                 </a>
+            -->
             </div>
         </div>
     
