added focus-on directive

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="scripts/directives/feFluid.directive.js"></script>
     <script src="scripts/directives/feStateful.directive.js"></script>
     <script src="scripts/directives/fileOnChange.directive.js"></script>
+    <script src="scripts/directives/focusOn.directive.js"></script>
     <script src="scripts/directives/imageLoadError.directive.js"></script>
     <script src="scripts/directives/scrollToTop.directive.js"></script>
     <script src="scripts/directives/subject.directive.js"></script>
@@ -286,6 +287,7 @@
                                     type="button"
                                     class="btn btn-default"
                                     popover-trigger="'outsideClick'"
+                                    popover-is-open="discussPopoverOpen"
                                     title="DISCUSS">
                                     <!--<span class="glyphicon glyphicon-comment">&nbsp;</span>-->
                                     <div class="ico-text-1">
