--- a/public/html/logoff.html
+++ b/public/html/logoff.html
@@ -2,9 +2,18 @@
 <html>
 <body>
 
-<h1>Logged Off</h1>
+<link rel="stylesheet" type="text/css" href="../../styles/page-card.css" />
 
-<h3>You have been successfully logged off.</h3>
+	<div class="card">
+		<div class="primary-title">Logged Off</div>
+
+		<div class="supporting-text">You have been successfully logged off.</div>
+		<div class="action-area">
+			<a href="http://conduit-dev.dev.dev.east.paas.geointservices.io" class="card-action primary">
+				LOG BACK ON
+			</a>
+		</div>
+	</div>
 
 </body>
 </html>
