--- a/public/html/unsupported.html
+++ b/public/html/unsupported.html
@@ -2,11 +2,19 @@
 <html>
 <body>
 
-<h1>Whoops!</h1>
+<link rel="stylesheet" type="text/css" href="../../styles/page-card.css" />
 
-<h3>Looks like we don't support this browser--yet. We're working on it! For the time being, please use a different browser.</h3>
+	<div class="card">
+		<div class="primary-title">Unsupported</div>
 
-<img src='./resources/ie.png' style="height: 75vh"/>
+		<div class="supporting-text">It looks like we don't support this browser--yet. We're working on it, so check back soon!</div>
+
+        <div class="action-area">
+			<a href="http://www.google.com" class="card-action primary">
+				GO TO THE GLOBE
+			</a>
+		</div>
+	</div>
 
 </body>
 </html>
