Style updates for logoff and unsupported pages

--- a/public/html/logoff.html
+++ b/public/html/logoff.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<title>
+	Conduit
+</title>
 <body>
 
 <link rel="stylesheet" type="text/css" href="../../styles/page-card.css" />
@@ -9,11 +12,13 @@
 
 		<div class="supporting-text">You have been successfully logged off.</div>
 		<div class="action-area">
-			<a href="http://conduit-dev.dev.dev.east.paas.geointservices.io" class="card-action primary">
+			<a href="/" class="card-action primary">
 				LOG BACK ON
 			</a>
 		</div>
 	</div>
+
+	
 
 </body>
 </html>
