--- a/public/html/unsupported.html
+++ b/public/html/unsupported.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<title>
+	Conduit
+</title>
 <body>
 
 <link rel="stylesheet" type="text/css" href="../../styles/page-card.css" />
