--- a/public/html/unsupported.html
+++ b/public/html/unsupported.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>
-	Conduit
-</title>
+<head>
+	<title>
+		Conduit
+	</title>
+</head>
 <body>
 
 <link rel="stylesheet" type="text/css" href="../../styles/page-card.css" />
