added angular route

--- a/public/html/logoff.html
+++ b/public/html/logoff.html
@@ -5,11 +5,11 @@
 		Conduit
 	</title>
 </head>
-<body>
+<body class="material">
 
-<link rel="stylesheet" type="text/css" href="../../styles/page-card.css" />
+<link rel="stylesheet" type="text/css" href="../../styles/material-card.css" />
 
-	<div class="card">
+	<div class="material card">
 		<div class="primary-title">Logged Off</div>
 
 		<div class="supporting-text">You have been successfully logged off.</div>
