--- a/public/html/unsupported.html
+++ b/public/html/unsupported.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<link rel="stylesheet" type="text/css" href="../../styles/page-card.css" />
+<link rel="stylesheet" type="text/css" href="../../styles/material-card.css" />
 
-	<div class="card">
+	<div class="material card">
 		<div class="primary-title">Unsupported</div>
 
 		<div class="supporting-text">It looks like we don't support this browser--yet. We're working on it, so check back soon!</div>
