--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <!-- controllers -->
     <script src="scripts/controllers/book.controller.js"></script>
+    <script src="scripts/controllers/create-account.controller.js"></script>
     <script src="scripts/controllers/feed.controller.js"></script>
     <script src="scripts/controllers/page.controller.js"></script>
     <script src="scripts/controllers/subject.controller.js"></script>
