Material styling updates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html data-ng-app="conduit" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <base href="/">
     <meta http-equiv="Content-Type" content="application/json; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conduit Beta</title>
