--- a/public/html/logoff.html
+++ b/public/html/logoff.html
@@ -8,13 +8,14 @@
 <body class="material">
 
 <link rel="stylesheet" type="text/css" href="../../styles/material-card.css" />
+<link rel="stylesheet" type="text/css" href="../../styles/material-btn.css" />
 
 	<div class="material card">
 		<div class="primary-title">Logged Off</div>
 
 		<div class="supporting-text">You have been successfully logged off.</div>
 		<div class="action-area">
-			<a href="/" class="card-action primary">
+			<a href="/" class="material-btn flat primary">
 				LOG BACK ON
 			</a>
 		</div>
