--- a/public/html/unsupported.html
+++ b/public/html/unsupported.html
@@ -5,9 +5,10 @@
 		Conduit
 	</title>
 </head>
-<body>
+<body class="material">
 
 <link rel="stylesheet" type="text/css" href="../../styles/material-card.css" />
+<link rel="stylesheet" type="text/css" href="../../styles/material-btn.css" />
 
 	<div class="material card">
 		<div class="primary-title">Unsupported</div>
@@ -15,7 +16,7 @@
 		<div class="supporting-text">It looks like we don't support this browser--yet. We're working on it, so check back soon!</div>
 
         <div class="action-area">
-			<a href="http://www.google.com" class="card-action primary">
+			<a href="http://www.google.com" class="material-btn flat primary">
 				GO TO THE GLOBE
 			</a>
 		</div>
