Added user creation and forced app reload

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script src="scripts/services/filter.service.js"></script>
     <script src="scripts/services/keyboard.service.js"></script>
     <script src="scripts/services/user.service.js"></script>
+    <script src="scripts/services/reload.service.js"></script>
 
     <!-- tools -->
     <script src="scripts/tools/array.tools.js"></script>
