--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
     <!-- modules -->
     <script src="scripts/modules/controllers.module.js"></script>
     <script src="scripts/modules/directives.module.js"></script>
+    <script src="scripts/modules/modals.module.js"></script>
     <script src="scripts/modules/services.module.js"></script>
     <script src="scripts/modules/tools.module.js"></script>
+
+    <!-- modals -->
+    <script src="scripts/modals/new-book.modal.js"></script>
 
     <!-- controllers -->
     <script src="scripts/controllers/book.controller.js"></script>
