--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="scripts/controllers/book.controller.js"></script>
     <script src="scripts/controllers/create-account.controller.js"></script>
     <script src="scripts/controllers/feed.controller.js"></script>
+    <script src="scripts/controllers/multi-select.controller.js"></script>
     <script src="scripts/controllers/page.controller.js"></script>
     <script src="scripts/controllers/subject.controller.js"></script>
     <script src="scripts/controllers/viewer.controller.js"></script>
