--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <script src="scripts/directives/fileOnChange.directive.js"></script>
     <script src="scripts/directives/focusOn.directive.js"></script>
     <script src="scripts/directives/imageLoadError.directive.js"></script>
+    <script src="scripts/directives/material-textbox.directive.js"></script>
     <script src="scripts/directives/scrollToTop.directive.js"></script>
     <script src="scripts/directives/subject.directive.js"></script>
 
