--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     <script src="scripts/directives/feStateful.directive.js"></script>
     <script src="scripts/directives/fileOnChange.directive.js"></script>
     <script src="scripts/directives/focusOn.directive.js"></script>
+    <script src="scripts/directives/focus-on.directive.js"></script>
     <script src="scripts/directives/imageLoadError.directive.js"></script>
+    <script src="scripts/directives/material-dropdown.directive.js"></script>
     <script src="scripts/directives/material-textbox.directive.js"></script>
     <script src="scripts/directives/scrollToTop.directive.js"></script>
     <script src="scripts/directives/subject.directive.js"></script>
