Added classification banner

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 </head>
 
 <body>
+    <div class="classification u header">UNCLASSIFIED</div>
     <div ng-view></div>
+    <div class="classification u footer">UNCLASSIFIED</div>
 </body>
 </html>
