Removed unused packages

--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
     <link rel="stylesheet" type="text/css" href="./packages/angular-xeditable/xeditable.min.css" />
     <link rel="stylesheet" type="text/css" href="./packages/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="./packages/angular-loading-bar/loading-bar.min.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" /> 
+    <link rel="stylesheet" type="text/css" href="./styles/style.min.css" /> 
   
     <!-- vendor -->
-	<script src="./packages/angular-1.6.7/angular.js"></script>
+	<script src="./packages/angular-1.6.7/angular.min.js"></script>
     <script src="./packages/angular-1.6.7/angular-animate.min.js"></script>
     <script src="./packages/angular-1.6.7/angular-route.min.js"></script>
     <script src="./packages/ui-bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script src="./packages/angular-xeditable/xeditable.min.js"></script>
-    <script src="./packages/docxtemplater/docxtemplater.min.js"></script> 
-    <script src="./packages/docxtemplater/docxtemplater-image-module.min.js"></script> 
-    <script src="./packages/jszip/jszip.min.js"></script>
-    <script src="./packages/filesaver/FileSaver.min.js"></script>
-    <script src="./packages/jszip-utils/jszip-utils.min.js"></script>
     <script src="./packages/angular-loading-bar/loading-bar.min.js"></script>
     <script src="./packages/ng-infinite-scroll/ng-infinite-scroll.min.js"></script>
     <script src="./packages/angular-click-outside/angular-click-outside.js"></script>
